# JPlayer

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jarvis/jplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: XData.cpp  XData.h  XParameter.h  Xlog.h  jplayer-lib.cpp  sdk.h
app/src/main/cpp/g711/: g711_cq.cpp  g711_cq.h  g711a.cpp  g711a.h  g711u.cpp  g711u.h
app/src/main/cpp/player/: IPlayer.cpp  IPlayer.h  IPlayerProxy.cpp  IPlayerProxy.h
app/src/main/cpp/player/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/player/builder/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h
app/src/main/cpp/player/decode/: Capture.cpp  Capture.h  DecodeInit.h  FFDecode.cpp  FFDecode.h  G711Decode.cpp  G711Decode.h  IDecode.cpp  IDecode.h
app/src/main/cpp/player/demux/: FFDemux.cpp  IDemux.cpp  IDemux.h
app/src/main/cpp/player/filter/: STFilter.cpp  STFilter.h
app/src/main/cpp/player/opengl/: XEGL.cpp  XShader.cpp  XTexture.cpp
app/src/main/cpp/player/resample/: FFResample.cpp  IResample.cpp  IResample.h
app/src/main/cpp/player/ts/: FFTSAudio.cpp  FFTSAudio.h  FFTSVideo.cpp  FFTSVideo.h  G711TSAudio.cpp  G711TSAudio.h  ITSAudio.cpp  ITSAudio.h  ITSVideo.cpp  ITSVideo.h
app/src/main/cpp/player/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h
app/src/main/cpp/recorder/: IRecorder.cpp  IRecorder.h  IRecorderProxy.cpp  IRecorderProxy.h  JMediaCodec.cpp  JMediaCodec.h  RecordParam.cpp  RecordParam.h
app/src/main/cpp/recorder/audio/: FFAudioEncodeRecorder.cpp  FFAudioEncodeRecorder.h  IAudioEncodeRecorder.cpp  IAudioEncodeRecorder.h
app/src/main/cpp/recorder/encode/: FFEncode.cpp  FFEncode.h  IEncode.cpp  IEncode.h
app/src/main/cpp/recorder/video/: FFVideoRecorder.cpp  FFVideoRecorder.h  IVideoRecorder.cpp  IVideoRecorder.h
app/src/main/cpp/sccodec/: FFCodec.cpp  FFCodec.h  G711Codec.cpp  G711Codec.h  SCCodec.cpp  SCCodec.h  SCCodecParam.cpp  SCCodecParam.h
app/src/main/cpp/sccodec/ff/: FFAudioEncoder.cpp  FFAudioEncoder.h  FFVideoEncoder.cpp  FFVideoEncoder.h
app/src/main/cpp/sccodec/ff/encode/: FFEncode.cpp  FFEncode.h  IEncode.cpp  IEncode.h
app/src/main/java/com/jarvis/jplayer/: JCodec.java  JPlayView.java  JPlayer.java  OnStreamCallback.java
app/src/main/java/com/jarvis/jplayer/sccodec/: AudioDecoder.java  AudioEncoder.java  VideoDecoder.java  VideoEncoder.java
app/src/test/java/com/jarvis/jplayer/: ExampleUnitTest.java
